tests/testFiles/semanticErrors/whileloopwithnonbooleanconditional.meme
yo, I'mma let you finish (1 + 2) but {
}
